show product image in product list

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
     "private": true,
     "scripts": {
+        "cleanup": "rm -rf public/images",
+        "predevelopment": "npm run cleanup",
+        "prewatch": "npm run cleanup",
+        "prehot": "npm run cleanup",
+        "preproduction": "npm run cleanup",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
