--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         "laravelcollective/html": "^6.1",
         "laravellegends/pt-br-validator": "^7.0",
         "lucascudo/laravel-pt-br-localization": "^1.1",
-        "yajra/laravel-datatables-oracle": "^9.10"
+        "yajra/laravel-datatables-oracle": "^9.10",
+        "fzaninotto/faker": "^1.9.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
         "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
