--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,17 @@
         "php": "^7.2.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "fzaninotto/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
         "laravellegends/pt-br-validator": "^7.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "league/flysystem-cached-adapter": "^1.0",
         "lucascudo/laravel-pt-br-localization": "^1.1",
-        "yajra/laravel-datatables-oracle": "^9.10",
-        "fzaninotto/faker": "^1.9.1"
+        "yajra/laravel-datatables-oracle": "^9.10"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
